Contenedor/KUBERNETES/Kubernetes/grpc-client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-client-deployment
  namespace: project
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: grpc-client
  template:
    metadata:
      labels:
        app: grpc-client
    spec:
      containers:
        - name: grpc-client
          image: dberrio/grpc-client:latest
