Contenedor/KUBERNETES/Kubernetes/grpc-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-server-deployment
  namespace: project
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: grpc-server
  template:
    metadata:
      labels:
        app: grpc-server
    spec:
      containers:
        - name: grpc-server
          image: dberrio/grpc-server:latest
