Contenedor/KUBERNETES/Kubernetes/kafka-consumer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-consumer-deployment
  namespace: project
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: kafka-consumer
  template:
    metadata:
      labels:
        app: kafka-consumer
    spec:
      containers:
        - name: kafka-consumer
          image: dberrio/grpc-server:latest
