Contenedor/KUBERNETES/Kubernetes/kafka-producer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-producer-deployment
  namespace: project
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: kafka-producer
  template:
    metadata:
      labels:
        app: kafka-producer
    spec:
      containers:
        - name: kafka-producer
          image: dberrio/grpc-client:latest
