Contenedor/KUBERNETES/Kubernetes/grpc-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-client-service
  namespace: project
spec:
  selector:
    app: grpc-client
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
