Contenedor/KUBERNETES/Kubernetes/kafka-consumer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-consumer-service
  namespace: project
spec:
  selector:
    app: kafka-consumer
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
