Contenedor/KUBERNETES/Kubernetes/kafka-producer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-producer-service
  namespace: project
spec:
  selector:
    app: kafka-producer
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
